--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="estilo.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <meta charset="UTF-8">
+    <title>Materias</title>
+</head>
+<body>
+<h1/> Sebastian Latuf    3°CSTC</h1>
 
+<h3/> Laboratorio de programación orientada a objetos <h3/>
+<h3/> taller de Tecnologias de Soporte Informático <h3/>
+
+</body>
+</html>
