--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="a.css">
+    <link rel="stylesheet" href="">
+    <meta charset="UTF-8">
+    <title>Materias</title>
+</head>
+<body>
+<h1/> Sebastian Latuf    3°CSTC</h1>
 
+<h2><button id="boton 1"> Laboratorio de programación orientada a objetos </button></h2>
+<h2><button id="boton 2"> taller de Tecnologias de Soporte Informático </button></h2>
+</body>
+</html>
