--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <link rel="stylesheet" href="a.css">
     <link rel="stylesheet" href="">
     <meta charset="UTF-8">
-    <title>Materias</title>
+    <title>Nico</title>
 </head>
 <body>
-<h1/> Sebastian Latuf    3°CSTC</h1>
-
-<h2><button id="boton 1"> Laboratorio de programación orientada a objetos </button></h2>
-<h2><button id="boton 2"> taller de Tecnologias de Soporte Informático </button></h2>
+<h1/> Putoooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo</h1>
+    
 </body>
 </html>
