--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Nico</title>
 </head>
 <body>
-<h1/> Putoooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo</h1>
+<h3/> nico putoooooooooooooo </h3>
     
 </body>
 </html>
