--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h3/> nico putoooooooooooooo </h3>
-<img src="ja.jpg" alt="jaja">
+<img id="imagen" src="ja.jpg" alt="jaja">
     
 </body>
 </html>
