--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="stylesheet" href="">
     <meta charset="UTF-8">
     <title>Nico</title>
+        <style>
+        #imagen {
+            width: 50%; 
+            height: auto; 
+        }
 </head>
 <body>
 <h3/> nico putoooooooooooooo </h3>
