--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         
 </head>
 <body>
-<h3/> nico putoooooooooooooo </h3>
+<h3/> nico putooooooooooooooooooooooooooooooooooooo </h3>
 <img id="imagen" src="ja.jpg" alt="jaja">
     
 </body>
